added: XmlStreamSerializer + Test